# first-flask-project

./: README.md  app.py  pyproject.toml
templates/: home.html
